tests/snapshots/render/ansi@commonmark-spec-111-indented_code_blocks.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/111-indented_code_blocks.md
snapshot_kind: text
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mchunk1[0m                                                                      [32m │[0m
[32m│ [0m[33m[0m                                                                            [32m │[0m
[32m│ [0m[33mchunk2[0m                                                                      [32m │[0m
[32m│ [0m[33m[0m                                                                            [32m │[0m
[32m│ [0m[33m[0m                                                                            [32m │[0m
[32m│ [0m[33m[0m                                                                            [32m │[0m
[32m│ [0m[33mchunk3[0m                                                                      [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
