tests/snapshots/render/ansi@commonmark-spec-116-indented_code_blocks.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/116-indented_code_blocks.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m    foo                                                                     [32m │[0m
[32m│ [0mbar                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
